--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,19 @@
     cursor: pointer;
 }
 
-/* nav{
+
+ header{
+    height: 50px;
+    background: #072c59;
+    /* border-right: 40px solid green; */
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 92px;
+
+}
+nav{
     display: flex;
     flex: 2;
     gap: 20px;
@@ -82,5 +94,4 @@ button{
     font-weight: 600;
     line-height: 29.05px;
 }
- */
 
