--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
 }
 .banner-text p{
     font-family: Arial, Helvetica, sans-serif;
-    line-height: 40px;
+    line-height: 30px;
     color: #212121;
     font-weight: 400;
     font-size: 24px;
@@ -36,17 +36,12 @@
     width: 180px;
     height: 48px;
     color: white;
-    position: absolute;
-    /* width: Fixed (180px);;
-    height: Hug (48px); */
-    top: 492px;
-    left: 206px;
     padding: 13px, 56px, 13px, 56px;
-    border-radius: 8px;
-    gap: 10px; 
+    border-radius: 8px; 
     box-shadow: 0px 10px 15px lightgrey;
     border: none;
     cursor: pointer;
+    margin: 70px 0 20px 60px
 }
 
 
